--- a/config.yaml
+++ b/config.yaml
@@ -5,7 +5,7 @@ title: Hugo Parsa Forestry Starter
 # Theme settings
 module:
   imports:
-   - path: github.com/themefisher/parsa-hugo
+   - path: github.com/calo001/parsa-hugo
      mounts:
      - source: layouts
        target: layouts
@@ -13,7 +13,7 @@ module:
        target: assets
      - source: static
        target: static
-     - source: exampleSite/static/images
+     - source: myStore/static/images
        target: static/images
 
 summaryLength: '10'
